# feature_selection_project

./: .gitignore  README.md  comparison_analysis.py  main.py  memoria.md  pyproject.toml  run_comparison.py  test_default_config.py  visualize_results.py
comparison_results/: feature_enhancement_comparison_20251117_110909.csv  feature_enhancement_comparison_20251117_153932.csv  feature_enhancement_comparison_20251117_155935.csv  feature_enhancement_comparison_20251118_154507.csv  feature_enhancement_comparison_20251118_155918.csv  feature_enhancement_comparison_20251119_111743.csv  feature_enhancement_comparison_20251119_113956.csv  feature_enhancement_comparison_20251119_115743.csv  feature_enhancement_comparison_20251119_123939.csv  feature_enhancement_comparison_20251119_144139.csv  feature_enhancement_comparison_20251119_144413.csv  feature_enhancement_comparison_20251119_144733.csv  feature_enhancement_comparison_20251119_145208.csv  feature_enhancement_comparison_20251119_145623.csv  feature_enhancement_comparison_20251119_151106.csv  feature_enhancement_comparison_20251119_153131.csv  feature_enhancement_comparison_20251119_153343.csv  feature_enhancement_comparison_20251123_103855.csv  feature_enhancement_comparison_20251123_104418.csv  summary_report.txt
config_examples/: OPERATORS_GUIDE.md  README.md  advanced_example.py  selection_config_example.json  synthesis_config_example.json
configs/: comprehensive_selection.json  comprehensive_synthesis.json  multi_synthesis_multiprocessing.json  quick_selection.json  quick_synthesis.json  (+1 more)
data/: AutoMPG.csv  (+2 more)
(+34 files in other folders)
