# Part 1: Tells packaging tools how to build the project.
# You can usually leave this unchanged.
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# Part 2: Your project's metadata and core dependencies.
[project]
name = "feature-selection-project"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" }, # <-- CHANGE THIS
]
description = "A bio-inspired feature selection tool using the NSGA-II algorithm." # <-- UPDATED
readme = "README.md"
requires-python = ">=3.13"
# These are the packages needed to RUN your program.
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]

# Part 3: Optional dependencies for development.
[project.optional-dependencies]
dev = [
    "black>=25.9.0", # The code formatter is now here
]

# Part 4: Tells the builder where to find your code.
# THIS IS THE CRITICAL PART FOR FIXING YOUR IMPORT ERRORS.
[tool.setuptools]
package-dir = {"" = "."}
packages = ["feature_enhancer"]
